# src/api/specifications/openapi.yaml
@@ -8,7 +8,95 @@
     },
   'paths':
     {
-      '/api/Calendar/price':
+      '/Auth/register':
+        {
+          'post':
+            {
+              'tags': ['Auth'],
+              'requestBody':
+                {
+                  'content':
+                    {
+                      'application/json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [
+                                  {
+                                    '$ref': '#/components/schemas/RegisterModel'
+                                  }
+                                ]
+                            }
+                        },
+                      'text/json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [
+                                  {
+                                    '$ref': '#/components/schemas/RegisterModel'
+                                  }
+                                ]
+                            }
+                        },
+                      'application/*+json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [
+                                  {
+                                    '$ref': '#/components/schemas/RegisterModel'
+                                  }
+                                ]
+                            }
+                        }
+                    }
+                },
+              'responses': { '200': { 'description': 'OK' } }
+            }
+        },
+      '/Auth/login':
+        {
+          'post':
+            {
+              'tags': ['Auth'],
+              'requestBody':
+                {
+                  'content':
+                    {
+                      'application/json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [{ '$ref': '#/components/schemas/LoginModel' }]
+                            }
+                        },
+                      'text/json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [{ '$ref': '#/components/schemas/LoginModel' }]
+                            }
+                        },
+                      'application/*+json':
+                        {
+                          'schema':
+                            {
+                              'allOf':
+                                [{ '$ref': '#/components/schemas/LoginModel' }]
+                            }
+                        }
+                    }
+                },
+              'responses': { '200': { 'description': 'OK' } }
+            }
+        },
+      '/Calendar/price':
         {
           'get':
             {
@@ -18,12 +106,12 @@
                   {
                     'name': 'start',
                     'in': 'query',
-                    'schema': { 'type': 'string', 'format': 'date-time' }
+                    'schema': { 'type': 'string' }
                   },
                   {
                     'name': 'end',
                     'in': 'query',
-                    'schema': { 'type': 'string', 'format': 'date-time' }
+                    'schema': { 'type': 'string' }
                   }
                 ],
               'responses':
@@ -44,7 +132,7 @@
                 }
             }
         },
-      '/api/Calendar':
+      '/Calendar':
         {
           'get':
             {
@@ -153,7 +241,7 @@
                 }
             }
         },
-      '/api/Calendar/{id}':
+      '/Calendar/{id}':
         {
           'get':
             {
@@ -252,7 +340,7 @@
               'responses': { '200': { 'description': 'OK' } }
             }
         },
-      '/api/Reservations':
+      '/Reservations':
         {
           'get':
             {
@@ -491,7 +579,7 @@
                 }
             }
         },
-      '/api/Reservations/{id}':
+      '/Reservations/{id}':
         {
           'get':
             {
@@ -837,131 +925,6 @@
                     }
                 }
             }
-        },
-      '/api/Users/register':
-        {
-          'post':
-            {
-              'tags': ['Users'],
-              'requestBody':
-                {
-                  'content':
-                    {
-                      'application/json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/CreateUserDto'
-                                  }
-                                ]
-                            }
-                        },
-                      'text/json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/CreateUserDto'
-                                  }
-                                ]
-                            }
-                        },
-                      'application/*+json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/CreateUserDto'
-                                  }
-                                ]
-                            }
-                        }
-                    }
-                },
-              'responses': { '200': { 'description': 'OK' } }
-            }
-        },
-      '/api/Users/login':
-        {
-          'post':
-            {
-              'tags': ['Users'],
-              'requestBody':
-                {
-                  'content':
-                    {
-                      'application/json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/LoginUserDto'
-                                  }
-                                ]
-                            }
-                        },
-                      'text/json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/LoginUserDto'
-                                  }
-                                ]
-                            }
-                        },
-                      'application/*+json':
-                        {
-                          'schema':
-                            {
-                              'allOf':
-                                [
-                                  {
-                                    '$ref': '#/components/schemas/LoginUserDto'
-                                  }
-                                ]
-                            }
-                        }
-                    }
-                },
-              'responses': { '200': { 'description': 'OK' } }
-            }
-        },
-      '/api/Users/{id}':
-        {
-          'get':
-            {
-              'tags': ['Users'],
-              'parameters':
-                [
-                  {
-                    'name': 'id',
-                    'in': 'path',
-                    'required': true,
-                    'schema': { 'type': 'string', 'format': 'uuid' }
-                  }
-                ],
-              'responses': { '200': { 'description': 'OK' } }
-            }
-        },
-      '/api/Users':
-        {
-          'get':
-            {
-              'tags': ['Users'],
-              'responses': { '200': { 'description': 'OK' } }
-            }
         }
     },
   'components':
@@ -981,20 +944,7 @@
                 },
               'additionalProperties': false
             },
-          'CreateUserDto':
-            {
-              'required': ['email', 'firstName', 'lastName', 'password'],
-              'type': 'object',
-              'properties':
-                {
-                  'email': { 'type': 'string', 'nullable': true },
-                  'firstName': { 'type': 'string', 'nullable': true },
-                  'lastName': { 'type': 'string', 'nullable': true },
-                  'password': { 'type': 'string', 'nullable': true }
-                },
-              'additionalProperties': false
-            },
-          'LoginUserDto':
+          'LoginModel':
             {
               'required': ['email', 'password'],
               'type': 'object',
@@ -1018,6 +968,19 @@
                   'instance': { 'type': 'string', 'nullable': true }
                 },
               'additionalProperties': {}
+            },
+          'RegisterModel':
+            {
+              'required': ['email', 'firstName', 'lastName', 'password'],
+              'type': 'object',
+              'properties':
+                {
+                  'email': { 'type': 'string', 'nullable': true },
+                  'password': { 'type': 'string', 'nullable': true },
+                  'firstName': { 'type': 'string', 'nullable': true },
+                  'lastName': { 'type': 'string', 'nullable': true }
+                },
+              'additionalProperties': false
             },
           'ReservationDto':
             {
